# DDS_MiniBus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audit_report.txt  config.json  config_cbor_preferred.json  config_json_only.json  config_tx.json  evidence_ctest_units_only.txt  evidence_final_complete_ctest_units.txt  evidence_final_ctest_units.txt  main.cpp  run_rx.ps1  run_tx.ps1
.github/workflows/: ci.yml
DDS_MiniBus-main/: CMakeLists.txt  config_rx.json  evidence_ctest_verbose.txt  repo_tree.txt
DDS_MiniBus-main/core/: publisher.cpp  publisher.h  subscriber.cpp  topic.h
DDS_MiniBus-main/discovery/: discovery_manager.h
DDS_MiniBus-main/docs/: DesignRationale.md
DDS_MiniBus-main/evidence/: retain_last_proof.txt  smoke_help.txt  summary.txt
DDS_MiniBus-main/evidence/ctest/: ctest_full_output.txt.tmp34705
DDS_MiniBus-main/include/: ack_manager.h  config_manager.h  dds_core.h  tcp_transport.h
DDS_MiniBus-main/scripts/: run_rx.ps1  run_tx.bat  run_tx.ps1
DDS_MiniBus-main/tests/: test_discovery_receiver.cpp
DDS_MiniBus-main/tests/common/: test_utils.cpp  test_utils.h
DDS_MiniBus-main/tests/perf/: test_throughput_udp.cpp
DDS_MiniBus-main/tests/test_helpers/: helpers.h
DDS_MiniBus-main/tests/unit/: test_ack_manager.cpp  test_integration_scenarios.cpp
DDS_MiniBus-main/transport/: transport_base.cpp  transport_base.h  udp_transport.h
DDS_MiniBus-main/utils/: log_setup.cpp
build_diag/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  logs_integration_loopback.txt  logs_integration_no_loopback.txt
build_diag/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_diag/Testing/Temporary/: CTestCostData.txt
build_diag/config/: config.json  config_rx.json  config_rx2.json  dds-sender-1.json
build_diag/dds_mini_bus_autogen/: deps  moc_predefs.h
build_diag/dds_mini_bus_autogen/6YEA5652QU/: moc_ack_manager.cpp  moc_ack_manager.cpp.d  moc_config_manager.cpp.d  moc_dds_core.cpp.d  moc_discovery_manager.cpp.d  moc_tcp_transport.cpp  moc_tcp_transport.cpp.d  moc_transport_base.cpp.d  moc_udp_transport.cpp.d
build_diag/mini_dds_lib_autogen/: deps  mocs_compilation.cpp
build_diag/mini_dds_lib_autogen/6YEA5652QU/: moc_ack_manager.cpp.d  moc_config_manager.cpp.d  moc_dds_core.cpp.d  moc_discovery_manager.cpp  moc_discovery_manager.cpp.d  moc_tcp_transport.cpp.d  moc_transport_base.cpp  moc_transport_base.cpp.d  moc_udp_transport.cpp  moc_udp_transport.cpp.d
build_diag/test_ack_manager_autogen/: deps
build_diag/test_ack_manager_autogen/include/: test_ack_manager.moc  test_ack_manager.moc.d
build_diag/test_discovery_cycle_autogen/: deps  moc_predefs.h
build_diag/test_discovery_cycle_autogen/J2YW4CT3N5/: moc_test_utils.cpp.d
build_diag/test_discovery_cycle_autogen/include/: test_discovery_cycle.moc.d
build_diag/test_discovery_tx_autogen/: deps
build_diag/test_integration_scenarios_autogen/: deps
build_diag/test_integration_scenarios_autogen/include/: test_integration_scenarios.moc  test_integration_scenarios.moc.d
build_diag/test_latency_reliable_autogen/: deps  moc_predefs.h
build_diag/test_negotiation_autogen/: deps
build_diag/test_negotiation_autogen/include/: test_negotiation.moc.d
build_diag/test_pub2sub_reliable_autogen/: deps
build_diag/test_pub2sub_reliable_autogen/J2YW4CT3N5/: moc_test_utils.cpp.d
build_diag/test_qos_failure_autogen/: deps
build_diag/test_qos_failure_autogen/J2YW4CT3N5/: moc_test_utils.cpp.d
build_diag/test_serializer_autogen/: deps
build_diag/test_tcp_reliable_autogen/: deps
build_diag/test_throughput_udp_autogen/: deps
build_fix/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
build_fix/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_fix/dds_mini_bus_autogen/: deps
build_fix/mini_dds_lib_autogen/: deps
build_fix/test_ack_manager_autogen/: deps
build_fix/test_discovery_cycle_autogen/: deps  mocs_compilation.cpp
build_fix/test_discovery_rx_autogen/: deps
build_fix/test_integration_scenarios_autogen/: deps
build_fix/test_latency_reliable_autogen/: deps
build_fix/test_negotiation_autogen/: deps  moc_predefs.h
build_fix/test_pub2sub_reliable_autogen/: deps  moc_predefs.h
build_fix/test_qos_failure_autogen/: deps
build_fix/test_serializer_autogen/: deps
build_fix/test_throughput_udp_autogen/: deps
config/: README.md  config_broadcast.json  config_manager.cpp  config_manager.h  example.yaml
core/: bounded_lru.h  dds_core.cpp  dds_core.h  qos.h  subscriber.h
discovery/: discovery_manager.cpp
docs/: Architecture.md  DesignRationale.md  diagrams.puml
docs/diagrams/: component.puml  sequence_discovery_cycle.puml  sequence_publish_reliable.puml
docs/fa/: Architecture.fa.md
evidence/: ctest_full_verbose.txt
evidence/ctest/: ctest_units_only.txt  latency_reliable.txt  latency_reliable.txt.tmp7a808  test_ack_manager.txt  test_negotiation.txt  test_serializer.txt  throughput_udp.txt  throughput_udp.txt.tmpe593c
evidence/logs/: dds_deadletter.ndjson
include/: bounded_lru.h  cli.h  discovery_manager.h  frame_codec.h  log_setup.h  logger.h  publisher.h  qos.h  serializer.h  subscriber.h  topic.h  transport_base.h  udp_transport.h
scripts/: audit_repo.ps1  build_win.ps1  run_1pub_2subs.ps1  run_arch_tests.ps1  run_arch_tests.sh  run_rx.bat  run_rx.ps1  run_rx.sh  run_tcp_rx.ps1  run_tcp_tx.ps1  run_tx.ps1  run_tx.sh  test_all.ps1  test_pub2sub.ps1
serialization/: serializer.cpp  serializer.h
tests/: test_discovery_receiver.cpp  test_discovery_sender.cpp  test_tcp_loopback.cpp  test_tcp_reliable.cpp
tests/architecture_tests/: README.md
tests/integration/: test_discovery_cycle.cpp  test_pub2sub_reliable.cpp  test_qos_failure.cpp
tests/perf/: test_latency_reliable.cpp
tests/unit/: test_ack_packet.cpp  test_integration_scenarios.cpp  test_negotiation.cpp  test_serializer.cpp
transport/: ack_manager.cpp  ack_manager.h  frame_codec.h  tcp_transport.cpp  tcp_transport.h  udp_transport.cpp
utils/: cli.cpp  cli.h  log_setup.h  logger.cpp  logger.h
(+36 files in other folders)
